[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "m2dtools"
version = "0.1.0"
description = "Multiscale MD tools: pre/post-processing for molecular dynamics simulations"
authors = [
    { name="ZY" },
    { name="CZ" },
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
]

